@@ -1,3 +1,6 @@
+27 Nov 2004 mipsator
+ * added cpu features for x86 architecture.
+
 # snapshot 0.8.1-s9
 
 27 Nov 2004 mipsator
